--- a/perf/endpoints/exchange.yaml
+++ b/perf/endpoints/exchange.yaml
@@ -1,44 +1,53 @@
 config:
   environments:
     api:
-      target: 'http://localhost:5555'
+      target: "http://localhost:5555"
       plugins:
         statsd:
           host: localhost
           port: 8125
           prefix: "artillery-api"
       payload:
-        - path: '../sample_data/exchanges.csv'
+        - path: "../sample_data/exchanges.csv"
       fields:
-        - 'baseCurrency'
-        - 'counterCurrency'
-        - 'baseAmount'
-        - 'baseAccountId'
-        - 'counterAccountId'
+        - "baseCurrency"
+        - "counterCurrency"
+        - "baseAmount"
+        - "baseAccountId"
+        - "counterAccountId"
       loadAll: true
       name: exchanges
 
   pool: 50 # All HTTP requests from all virtual users will be sent over the same connections
 
   phases:
-    - name: Ramp
+    - name: Warmup Phase
       duration: 30
-      arrivalRate: 1
-      rampTo: 5
-    - name: Plain
-      duration: 60
-      arrivalRate: 5
+      arrivalRate: 2
+      rampTo: 10
+
+    # Load Test Phase: Simulate a steady load of users
+    - name: Load Test
+      duration: 60 # Test for 1 minute
+      arrivalRate: 20 # 20 new virtual users per second
+      rampTo: 20 # Steady state
+
+    # Stress Test Phase: Simulate a high load, increasing the number of users significantly
+    - name: Stress Test
+      duration: 60 # Test for 1 minute
+      arrivalRate: 100 # Start with 100 new users per second
+      rampTo: 200 # Ramp up to 200 users per second
 
 scenarios:
   - name: Exchange (/exchange)
     flow:
       - loop:
-        - post:
-            url: '/exchange'
-            json:
-              baseCurrency: '{{ $loopElement.baseCurrency }}'
-              counterCurrency: '{{ $loopElement.counterCurrency }}'
-              baseAmount: '{{ $loopElement.baseAmount }}'
-              baseAccountId: '{{ $loopElement.baseAccountId }}'
-              counterAccountId: '{{ $loopElement. counterAccountId }}'
+          - post:
+              url: "/exchange"
+              json:
+                baseCurrency: "{{ $loopElement.baseCurrency }}"
+                counterCurrency: "{{ $loopElement.counterCurrency }}"
+                baseAmount: "{{ $loopElement.baseAmount }}"
+                baseAccountId: "{{ $loopElement.baseAccountId }}"
+                counterAccountId: "{{ $loopElement.counterAccountId }}"
         over: exchanges
