--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
+    "mongodb": "^6.15.0",
     "nanoid": "^5.1.2",
     "redis": "^4.7.0"
   }
