misc: change docc and nginx configs

--- a/statsd.config.json
+++ b/statsd.config.json
@@ -1,5 +1,5 @@
 {
-  "graphiteHost": "127.0.0.1",
+  "graphiteHost": "graphite",
   "graphitePort": 2003,
   "port": 8125,
   "flushInterval": 1000,
