--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,65 @@
 services:
-    api:
-      build: ./app
+  api:
+    build: ./app
+    expose:
+      - "3000"
+    networks:
+      - backend
+  nginx:
+    image: nginx:1.27.4
+    ports:
+      - "5555:80"
+    volumes:
+      - ./nginx_reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./store/static/files:/static:ro
+    # links:
+    #   - api
+    depends_on:
+      - api
+    networks:
+      - backend
 
-    nginx:
-        image: nginx:1.27.4
-        ports:
-            - "5555:80"
-        volumes:
-            - ./nginx_reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro
-            - ./store/static/files:/static:ro
-        links:
-            - api
+  graphite:
+    image: graphiteapp/graphite-statsd:1.1.10-5
+    volumes:
+      - ./statsd.config.json:/opt/statsd/config/udp.js
+      - ./graphite.storage-schemas.conf:/opt/graphite/conf/storage-schemas.conf
+    ports:
+      - "8090:80"
+      - "8125:8125/udp"
+      - "8126:8126"
+    networks:
+      - backend
 
-    graphite:
-        image: graphiteapp/graphite-statsd:1.1.10-5
-        volumes:
-            - ./statsd.config.json:/opt/statsd/config/udp.js
-            - ./graphite.storage-schemas.conf:/opt/graphite/conf/storage-schemas.conf
-        ports:
-            - "8090:80"
-            - "8125:8125/udp"
-            - "8126:8126"
+  grafana:
+    image: grafana/grafana:11.5.2
+    ports:
+      - "80:3000"
+    volumes:
+      - "grafana_config:/var/lib/grafana"
+    networks:
+      - backend
 
-    grafana:
-        image: grafana/grafana:11.5.2
-        ports:
-            - "80:3000"
-        volumes:
-            - "grafana_config:/var/lib/grafana"
-
-    cadvisor:
-        image: gcr.io/cadvisor/cadvisor:v0.49.2
-        links:
-            - graphite
-        command: -storage_driver="statsd" -storage_driver_host="graphite:8125" -storage_driver_db="cadvisor" -storage_driver_buffer_duration="1s" --docker_only=true
-        ports:
-            - "8080:8080"
-        volumes:
-            - "/:/rootfs:ro"
-            - "/var/run:/var/run:rw"
-            - "/sys:/sys:ro"
-            - "/var/lib/docker/:/var/lib/docker:ro"
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:v0.49.2
+    # links:
+    #   - graphite
+    networks:
+      - backend
+    command: -storage_driver="statsd" -storage_driver_host="graphite:8125" -storage_driver_db="cadvisor" -storage_driver_buffer_duration="1s" --docker_only=true
+    ports:
+      - "8080:8080"
+    volumes:
+      - "/:/rootfs:ro"
+      - "/var/run:/var/run:rw"
+      - "/sys:/sys:ro"
+      - "/var/lib/docker/:/var/lib/docker:ro"
+    depends_on:
+      - graphite
 
 volumes:
-    grafana_config:
-        driver: local
+  grafana_config:
+    driver: local
+
+networks:
+  backend:
