--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -1,9 +1,12 @@
 upstream api { 
+    # least_conn;
     server exchange-api-1:3000;
+    # server exchange-api-2:3000;
+    # server exchange-api-3:3000;
 }
 
 server {
-    listen 80;
+    listen 80;  
 
     location / {
         proxy_pass http://api/;
