--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "express": "^4.21.2",
     "mongodb": "^6.15.0",
-    "nanoid": "^5.1.2",
-    "redis": "^4.7.0"
+    "nanoid": "^5.1.2"
   }
 }
