--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -1,8 +1,8 @@
 upstream api { 
-    # least_conn;
+    least_conn;
     server exchange-api-1:3000;
-    # server exchange-api-2:3000;
-    # server exchange-api-3:3000;
+    server exchange-api-2:3000;
+    server exchange-api-3:3000;
 }
 
 server {
